--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -2,7 +2,7 @@
 <ul>
   <li><%= @todo.title %></li>
   <li><%= @todo.body %></li>
-  <li><%= @todo.todo_count %></li>
+  <li><%= @todo.list_count %></li>
 </ul>
 
 <%= link_to "edit", edit_todo_path(@todo) %>
